# tune-demo

./: README.md  pyproject.toml  train.def
.github/workflows/: container-build.yaml
tune/: data.py  model.py  train.py
